# SnapAirUnit

./: .gitignore  CMakeLists.txt  README.md  checkpart.sh  checkver.sh  partitions.csv  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: task-template.md
components/command/cmd_nvs/: CMakeLists.txt  cmd_nvs.c  cmd_nvs.h
components/command/cmd_sau/: CMakeLists.txt  cmd_sau.c  cmd_sau.h
components/command/cmd_udp/: CMakeLists.txt  cmd_udp.c  cmd_udp.h
components/protocol_common/: CMakeLists.txt  addr_from_stdin.c  stdin_out.c
components/protocol_common/include/: addr_from_stdin.h
docs/: Build_and_Flash.md  ESP32_Dev_Board.md  How_to_Connect.md  How_to_Use.md  How_to_Work_with_Code.md  SnapAirUnit_Hardware_V1.0.md
front/web-demo/: package.json  vue.config.js
front/web-demo/public/: index.html
front/web-demo/src/: App.vue  main.js  router.js
front/web-demo/src/assets/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
front/web-demo/src/views/: Home.vue  Light.vue  RcChannel.vue  Wireless.vue
main/: CMakeLists.txt  Kconfig.projbuild  blink.c  blink.h  btspp.c  btspp.h  common.h  config.h  console.c  console.h  define.h  factory_setting.c  factory_setting.h  handle.c  handle.h  hy_protocol.c  hy_protocol.h  idf_component.yml  key.c  key.h  main.c  mode.c  mode.h  module.c  module.h  msp_protocol.c  msp_protocol.h  process.c  process.h  rest_server.c  rest_server.h  softap.c  softap.h  spiffs.c  spiffs.h  station.c  station.h  tello_protocol.c  tello_protocol.h  ttl.c  (+7 more)
